tests/NormalTests/paczka1/fuzzy1/80439903.err
Error in line 6: Rtj6yS S119 13,8
Error in line 13: pyH A17 59,6
Error in line 15: S119 A17 51,5
Error in line 26: S119 A17 95,9
Error in line 22: eID3Wip A17 25,4
Error in line 32: S119 S119 2"3,8
Error in line 33: Rtj6yS A114 31,3
